fixed issue with search bar invisible button

--- a/src/app/modules/main/components/toolbar/toolbar.component.css
+++ b/src/app/modules/main/components/toolbar/toolbar.component.css
@@ -99,6 +99,10 @@ button:hover{
   flex-direction: row;
 }
 
+.advancedSearchBtn{
+  margin-left: 40px;
+}
+
 .searchForm .searchInput input{
   width: 350px;
 }
